Added dataset and notebook for neural additive models