@@ -7,5 +7,10 @@
                  [io.github.nextjournal/clerk "0.13.838"]
                  [scicloj/tablecloth "7.000-beta-27"]
                  [uncomplicate/neanderthal "0.46.0"]
+                 [org.bytedeco/mkl-platform-redist "2022.2-1.5.8"]
                  [techascent/tech.ml.dataset "7.000-beta-30"]]
-  :repl-options {:init-ns notebooks.core})
+  :repl-options {:init-ns notebooks.core}
+  :jvm-opts ^:replace ["-Dclojure.compiler.direct-linking=true"
+                       "-XX:MaxDirectMemorySize=16g" "-XX:+UseLargePages"
+                       "--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED"
+                       "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED"])
